Added array/list handling for configuration values

--- a/krb5/files/krb5.conf
+++ b/krb5/files/krb5.conf
@@ -9,9 +9,19 @@
       {%- if value2 is mapping %}
   {{ key2 }} = {
         {%- for key3, value3 in value2 %}
+          {%- if value3 is list %}
+            {%- for v in value3 %}
+    {{ key3 }} = {{ v }}
+            {%- endfor %}
+          {%- else %}
     {{ key3 }} = {{ value3 }}
+          {%- endif %}
         {%- endfor %}
   }
+      {%- elif value2 is list %}
+        {%- for v in value2 %}
+  {{ key2 }} = {{ v }}
+        {%- endfor %}
       {%- else %}
   {{ key2 }} = {{ value2 }}
       {%- endif %}
