Fixed one of the foor loops in the krb5.conf tempalte

--- a/krb5/files/krb5.conf
+++ b/krb5/files/krb5.conf
@@ -8,7 +8,7 @@
     {%- for key2, value2 in value.iteritems() %}
       {%- if value2 is mapping %}
   {{ key2 }} = {
-        {%- for key3, value3 in value2 %}
+        {%- for key3, value3 in value2.iteritems() %}
           {%- if value3 is list %}
             {%- for v in value3 %}
     {{ key3 }} = {{ v }}
